--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html5>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <title>jQuery iCalendar</title>
-<style type="text/css">
-@import "css/jquery.icalendar.css";
-</style>
+
+<link rel="stylesheet" type="text/css" href="css/jquery.icalendar.css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.icalendar.js"></script>
 <script type="text/javascript">
